# robotframework-seleniumscreenshots

./: .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  libdoc.sh  requirements-python2.nix  requirements-python2.txt  requirements-python3-travis.nix  requirements-python3-travis.txt  requirements-python3.nix  requirements-python3.txt  requirements.txt  setup.cfg  setup.nix  setup.py  shell.nix
docs/: Introduction to SeleniumScreenshots.robot  index.html  keywords.html  nbconvert.tpl  update.sh
src/SeleniumScreenshots/: __init__.py
src/SeleniumScreenshots/resources/: add_dot.js  add_note.js  add_pointer.js  align_elements_horizontally.js  bootstrap_jquery.js  get_bounding_box.js  get_viewport_box.js  remove_element.js  update_element_style.js
