[metadata]
name = robotframework-seleniumscreenshots
version = 0.9.1
description = Robot Framework keyword library for capturing annotated screenshots with SeleniumLibrary
long_description = file: README.rst, CHANGELOG.rst
keywords = robotframework selenium
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://github.com/datakurre/robotframework-seleniumscreenshots
license = GPL version 2
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6

[options]
install_requires =
    setuptools
    robotframework>=3.0.2
    robotframework-seleniumlibrary>=3.2.0
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
* =
  resources/

[options.packages.find]
where =
    src

[options.extras_require]
docs =
    sphinx
    pillow
    sphinxcontrib-robotframework
PIL =
    PIL
Pillow =
    pillow

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,build,dist
max-complexity = 20

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py

[yapf]
based_on_style = pep8
allow_split_before_dict_value = False
allow_multiline_lambdas = True
coalesce_brackets = True
dedent_closing_brackets = True
join_multiple_lines = False
space_between_ending_comma_and_closing_bracket = True
split_arguments_when_comma_terminated = True
split_before_expression_after_opening_paren = True
split_before_first_argument = True
split_complex_comprehension = True
